force-app/main/default/objects/IndustryPrice__c.object
<CustomObject>
    <fields>
        <fullName>IPIndustry__c</fullName>
        <label>IPIndustry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPPrice__c</fullName>
        <label>IPPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IPProduct</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Industry Prices</relationshipLabel>
        <relationshipName>Industry_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPSLA__c</fullName>
        <label>IPSLA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Industry Price</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IPIndustry__c</columns>
        <columns>IPProduct__c</columns>
        <columns>IPSLA__c</columns>
        <columns>IPPrice__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IP-{0000}</displayFormat>
        <label>Industry Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Industry Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>